k8s/configs/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx # Use Nginx Ingress
    nginx.ingress.kubernetes.io/rewrite-target: /$1 # Solve react router routing issue
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600" # Increase the proxy read
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600" # and send timeout to 3600s
    nginx.ingress.kubernetes.io/upstream-hash-by: "$remote_addr" # Enable sticky session
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - thesis2020.kenjifam.fi
        - www.thesis2020.kenjifam.fi
      secretName: thesis2020-kenjifam-fi
  rules:
    - host: thesis2020.kenjifam.fi
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
    - host: www.thesis2020.kenjifam.fi
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
